--- a/index.html
+++ b/index.html
@@ -3,14 +3,13 @@
   <head>
     <meta charset="utf-8" />
     <title>YUM-KIT</title>
-    <script src="https://cdn.tailwindcss.com"></script>
+    <script src="tailwind.js"></script>
     <link
-    rel="stylesheet"
-    href="https://unpkg.com/@material-tailwind/html@latest/styles/material-tailwind.css"
+    data-trunk
+    rel="css"
+    href="mat-tw.css"
     />
  
-<!-- script -->
-<script src="https://unpkg.com/@material-tailwind/html@latest/scripts/script-name.js"></script>
     <script>
       tailwind.config = {
         theme: {
