--- a/index.html
+++ b/index.html
@@ -5,5 +5,6 @@
     <title>YUM-KIT</title>
     
     <link data-trunk rel="sass" href="index.scss" />
+    <base data-trunk-public-url />
   </head>
 </html>
