--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html class="dark">
   <head>
     <meta charset="utf-8" />
-    <title>YUM-KIT</title>
+    <title>YUM KIT</title>
     
     <link data-trunk rel="sass" href="index.scss" />
     <base data-trunk-public-url />
